--- a/homework14/cahee full/assets/css/style.css
+++ b/homework14/cahee full/assets/css/style.css
@@ -43,13 +43,18 @@ body {
   font-weight: 300;
   text-decoration: none;
   text-transform: uppercase;
+  -webkit-transition: all 0.1s ease-in;
+  -o-transition: all 0.1s ease-in;
   transition: all 0.1s ease-in;
+  -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
   font-size: 20px;
   line-height: 55px;
   text-align: center;
 }
 .btn:hover {
+  -webkit-transform: scale(1.03);
+  -ms-transform: scale(1.03);
   transform: scale(1.03);
 }
 
@@ -65,28 +70,44 @@ header {
   position: fixed;
   width: 100%;
   z-index: 10001;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 header .container__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 100%;
 }
 header.page_header {
   height: 60px;
+  -webkit-box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 0.5);
   box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 0.5);
+  -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
   background-color: rgba(255, 255, 255, 0.7);
 }
 header.page_header .header_logo {
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
   width: 64px;
   height: 27px;
 }
 
 .header__menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
 }
 .header__menu ul li {
@@ -108,6 +129,8 @@ header.page_header .header_logo {
   height: 3px;
   width: 0%;
   background-color: #ff6033;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 .header__menu ul li .menu_point:hover::before {
@@ -129,6 +152,7 @@ header.page_header .header_logo {
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
   display: none;
+  -webkit-backdrop-filter: blur(3px);
   backdrop-filter: blur(3px);
   z-index: 10000;
 }
@@ -140,10 +164,14 @@ header.page_header .header_logo {
   height: 100%;
   width: 100%;
   max-width: 400px;
+  -webkit-box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 0.5);
   box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 0.5);
+  -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 10001;
+  -webkit-transition: all 0.1s ease;
+  -o-transition: all 0.1s ease;
   transition: all 0.1s ease;
 }
 
@@ -160,6 +188,7 @@ header.page_header .header_logo {
 }
 
 .mobile__menu li {
+  -webkit-box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 0.5);
   box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 0.5);
 }
 .mobile__menu li a {
@@ -180,8 +209,14 @@ header.page_header .header_logo {
   background-size: contain;
 }
 .first__section--white .container__section--white {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .first__section--white .container__section--white .container__info {
@@ -237,8 +272,14 @@ header.page_header .header_logo {
 .second__section--green .container__section--green {
   background: url(../img/cup.png) top left 0 no-repeat;
   background-size: contain;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
   align-items: stretch;
   padding-bottom: 215px;
   margin: 0 auto;
@@ -264,8 +305,13 @@ header.page_header .header_logo {
   padding: 100px 0 151px;
 }
 .third__section--blue .container__section--blue {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 .third__section--blue .container__section--blue .container-title {
@@ -273,8 +319,14 @@ header.page_header .header_logo {
   position: relative;
   background: url(../img/tomato.png) center right no-repeat;
   background-size: contain;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
 }
 .third__section--blue .container__section--blue .container-title .third__title {
@@ -282,7 +334,11 @@ header.page_header .header_logo {
 }
 .third__section--blue .container__section--blue .list_container {
   width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 .third__section--blue .container__section--blue .list_container .servises_list {
@@ -299,8 +355,11 @@ header.page_header .header_logo {
   background-color: #fff;
   text-align: center;
   margin: 0 0 20px 0;
+  -webkit-transition: all 0.1s ease;
+  -o-transition: all 0.1s ease;
   transition: all 0.1s ease;
   position: relative;
+  -webkit-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
 }
 .list::after {
@@ -313,8 +372,13 @@ header.page_header .header_logo {
   top: 0;
 }
 .list .list_link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   color: #262626;
   width: 100%;
@@ -330,6 +394,7 @@ header.page_header .header_logo {
   height: 55px;
 }
 .list:hover {
+  -webkit-box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -350,16 +415,23 @@ header.page_header .header_logo {
   margin-bottom: 45px;
 }
 .fourth__section--yellow .container__section--yellow .picture_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   height: 100%;
   margin-bottom: 30px;
 }
 .fourth__section--yellow .container__section--yellow .picture_wrap .image_wrap .image_inner {
+  -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .fourth__section--yellow .container__section--yellow .picture_wrap .w68 {
@@ -368,8 +440,15 @@ header.page_header .header_logo {
 }
 .fourth__section--yellow .container__section--yellow .picture_wrap .w31 {
   width: calc(31.6239% - 15px);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .fourth__section--yellow .container__section--yellow .picture_wrap .w31 .w31_1 {
@@ -390,8 +469,13 @@ header.page_header .header_logo {
   background: url(../img/fontblueberry.png) top 100px right 40px no-repeat;
 }
 .fifth__section--white .container_fifth__section--white {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
   align-items: flex-end;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 .fifth__section--white .container_fifth__section--white .container_inner {
@@ -451,19 +535,29 @@ header.page_header .header_logo {
   line-height: 25px;
 }
 .sixth__section--violet .cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 .sixth__section--violet .cards .card {
   width: calc(33.33333% - 15px);
   position: relative;
+  -webkit-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.5);
   overflow: hidden;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 .sixth__section--violet .cards .card:hover {
+  -webkit-transform: scale(1.02);
+  -ms-transform: scale(1.02);
   transform: scale(1.02);
 }
 .sixth__section--violet .cards .card .image {
@@ -476,6 +570,8 @@ header.page_header .header_logo {
   bottom: 0;
   width: 100%;
   padding: 0 20px 20px 20px;
+  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.95) 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(10%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.95)));
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.95) 100%);
 }
 .sixth__section--violet .cards .card .wrap .topic {
@@ -504,6 +600,8 @@ header.page_header .header_logo {
   line-height: 30px;
   margin-left: -95px;
   margin-top: -95px;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -538,8 +636,13 @@ header.page_header .header_logo {
   line-height: 22px;
 }
 .seventh__section .container__seventh-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 .seventh__section .container__seventh-section .mini-container {
@@ -559,6 +662,18 @@ header.page_header .header_logo {
   border: 5px solid transparent;
   outline: none;
   padding: 0 20px;
+}
+.input_info .area::-webkit-input-placeholder {
+  color: #fff;
+}
+.input_info .area::-moz-placeholder {
+  color: #fff;
+}
+.input_info .area:-ms-input-placeholder {
+  color: #fff;
+}
+.input_info .area::-ms-input-placeholder {
+  color: #fff;
 }
 .input_info .area::placeholder {
   color: #fff;
@@ -583,6 +698,18 @@ header.page_header .header_logo {
   outline: none;
   padding: 20px 20px;
   margin-bottom: 15px;
+}
+.input_info textarea::-webkit-input-placeholder {
+  color: #fff;
+}
+.input_info textarea::-moz-placeholder {
+  color: #fff;
+}
+.input_info textarea:-ms-input-placeholder {
+  color: #fff;
+}
+.input_info textarea::-ms-input-placeholder {
+  color: #fff;
 }
 .input_info textarea::placeholder {
   color: #fff;
@@ -624,9 +751,15 @@ header.page_header .header_logo {
 }
 
 footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 100%;
   height: 90px;
@@ -658,10 +791,14 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   line-height: 38px;
   background-color: rgba(255, 255, 255, 0.7);
   border: 2px solid transparent;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
   z-index: 100;
 }
 .to_top:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
   transform: scale(1.2);
   border: 2px solid #ff6033;
 }
@@ -679,15 +816,22 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 11000;
   display: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .modal_wrap.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .modal_wrap .modal_window {
   background-color: #fff;
   border-radius: 10px;
+  -webkit-box-shadow: 3px 5px 10px #fff;
   box-shadow: 3px 5px 10px #fff;
   width: 100%;
   max-width: 400px;
@@ -718,6 +862,8 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   height: 3px;
   width: 0%;
   background-color: #ff6033;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 .modal_wrap .modal_window .modal_main a:hover::after {
@@ -752,9 +898,13 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   background-color: #fff;
 }
 .modal_wrap .modal_window .modal_footer .close:before {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 .modal_wrap .modal_window .modal_footer .close:after {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
@@ -782,6 +932,8 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
     padding: 220px 0 50px;
   }
   .first__section--white .container__section--white {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
   .first__section--white .container__section--white .container__info {
@@ -791,6 +943,8 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
 
   .second__section--green .container__section--green {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
   .second__section--green .container__section--green .main_block {
@@ -810,6 +964,8 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
     padding: 50px 0 60px;
   }
   .sixth__section--violet .cards {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     margin-bottom: 20px;
   }
@@ -870,6 +1026,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
 
   .third__section--blue .container__section--blue {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
   .third__section--blue .container__section--blue .container-title {
@@ -884,6 +1043,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
 
   .fourth__section--yellow .container__section--yellow .picture_wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
   .fourth__section--yellow .container__section--yellow .picture_wrap .w68 {
@@ -892,6 +1054,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
   .fourth__section--yellow .container__section--yellow .picture_wrap .w31 {
     margin-top: 15px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
     width: 100%;
   }
@@ -899,6 +1064,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
     width: calc(50% - 15px);
   }
   .fourth__section--yellow .container__section--yellow .bottom_wrap {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
   }
 
@@ -906,6 +1074,8 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
     background: none;
   }
   .fifth__section--white .container_fifth__section--white {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
   .fifth__section--white .container_fifth__section--white .container_inner {
@@ -915,6 +1085,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
 
   .sixth__section--violet .cards {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     margin-bottom: 0;
   }
@@ -923,6 +1096,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
 
   .seventh__section .container__seventh-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
   .seventh__section .container__seventh-section .mini-container {
@@ -930,6 +1106,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
 
   footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
@@ -947,6 +1126,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
 
   .fourth__section--yellow .container__section--yellow .picture_wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     margin-bottom: 0;
   }
@@ -956,6 +1138,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   }
   .fourth__section--yellow .container__section--yellow .picture_wrap .w31 {
     margin-top: 15px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     width: 100%;
   }
@@ -967,6 +1152,9 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
     margin-bottom: 30px;
   }
   .fourth__section--yellow .container__section--yellow .bottom_wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
   .fourth__section--yellow .container__section--yellow .bottom_wrap:last-child {
@@ -996,4 +1184,32 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
     font-size: 16px;
     font-weight: 700;
   }
+}
+.page_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+}
+
+header {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+main {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+
+footer {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
 }
